syntax = "proto3";

service StudentService {
  rpc getFullName(StudentID) returns (FullName);
  rpc getAverageGrades(GradesQuery) returns (AverageGrades);
  rpc getGroup(StudentID) returns (Group);
}

message StudentID {
  string id = 1;
}

message GradesQuery {
  string name = 1;
  string id = 2;
}

message FullName {
  string name = 1;
}

message AverageGrades {
  float average = 1;
}

message Group {
  string group = 1;
}
